# NuraOS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
agent/: Cargo.toml  rust-toolchain.toml
agent/nura-agent/: Cargo.toml
agent/nura-agent/src/: cli.rs  doctor.rs  main.rs  registry.rs  repl_cmd.rs
agent/nura-agent/src/providers/: anthropic.rs  llama_ffi.rs  local.rs  mod.rs  openai.rs
agent/nura-agent/src/tools/: fs_read.rs  mod.rs  net_status.rs  system_info.rs  time_now.rs
agent/nura-core/: Cargo.toml
agent/nura-core/src/: config.rs  context.rs  error.rs  lib.rs  logging.rs  persona.rs  provenance.rs  repl.rs  routing.rs  secrets.rs  session.rs  stream.rs  telemetry.rs  tool.rs  turn.rs  version.rs
agent/nura-core/src/provider/: conformance.rs  event.rs  message.rs  mod.rs  traits.rs
boards/: generic-arm64.json  qemu-x86_64.json  rpi4.json  rpi5.json
docs/: api.md  architecture.md  boards.md  boot-chain.md  boot.md  compliance.md  config.md  devices.md  events.md  filesystem.md  grafana-dashboard.json  handbook.md  host-setup.md  identity.md  index.md  inference.md  init.md  isolation.md  kernel.md  locale.md  logging.md  network-security.md  network.md  observability.md  operating.md  packages.md  perf.md  performance.md  persona.md  power.md  provenance.md  providers.md  recovery.md  releases.md  repl.md  resilience.md  resources.md  security.md  services.md  storage.md  (+8 more)
kernel/: PINNED.md
rootfs/: busybox.config  init
scripts/: VERSIONS.env  board-info.sh  boot-config.sh  build-agent.sh  build-boot.sh  build-gateway.sh  build-image.sh  cc-musl.sh  (+31 more)
(+278 files in other folders)
