[package]
name = "nura-agent"
version = "0.1.0"
edition = "2021"
description = "NuraOS AI agent binary"

[[bin]]
name = "nura-agent"
path = "src/main.rs"

[features]
# Include Anthropic and OpenAI network providers. Disable for offline-only builds.
remote-providers = []

[dependencies]
nura-core = { path = "../nura-core" }
serde_json = "1"
tracing = "0.1"
ureq = { version = "2.10", default-features = false }
